Kubernetes-Ingress-ConfigMaps-&-Secrets/troubleshooting/03-ingress-wrong-service/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop
  namespace: s12-trouble
  labels:
    app: shop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      labels:
        app: shop
    spec:
      containers:
        - name: web
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: conf
              mountPath: /etc/nginx/conf.d
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
      volumes:
        - name: conf
          configMap:
            name: shop-nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: shop
  namespace: s12-trouble
spec:
  selector:
    app: shop
  ports:
    - name: http
      port: 80
      targetPort: 80
